[advantage] structure finished

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <!-- Navbar -->
     <nav class="wrap nav_wrap">
         <a href="#">
-            <img src="./image/pic_logo.png" alt="">
+            <img src="./image/nav_logo.png" alt="">
         </a>
         <ul>
             <li>
@@ -63,9 +63,38 @@
     </nav>
 
     <!-- Banner -->
-    <header></header>
+    <header class="banner">
+        <h2>科技智能未来</h1>
+        <h1>威尔汉森智能指纹锁</h1>
+        <h4>合肥威尔汉森智能科技有限公司</h4>
+    </header>
 
-    <section></section>
+    <!-- Advantage -->
+    <section class="wrap advantage_wrap">
+        <div class="advantage_row">
+            <p class="cut_text">产品优势<i class="cut_line"></i></p>
+        </div>
+        <div class="advantage_row">
+            <h1>因为专业 所以放心</h1>
+            <p>5A级钻化触摸屏，最新、最先进的密码防窥技术；最新键盘采用苹果手机级别触控原理；密码
+                触摸屏优化等核心，科技铸就品质，彰显身份地位的完美诠释。
+            </p>
+        </div>
+        <div class="advantage_row">
+            <figure>
+                <img src="./image/pic_01.png" alt="">
+                <figcaption>0.5s光学识别指纹读头，响应速度快打开</figcaption>
+            </figure>
+            <figure>
+                <img src="./image/pic_02.png" alt="">
+                <figcaption>滑盖自动唤醒平时处于休眠状态70%</figcaption>
+            </figure>
+            <figure>
+                <img src="./image/pic_03.png" alt="">
+                <figcaption>多门搭配安装90%适用，与门之间完美搭配</figcaption>
+            </figure>
+        </div>
+    </section>
 
     <section></section>
 
