[data] structure finished

--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
     <!-- Banner -->
     <header class="banner">
         <h2>科技智能未来</h1>
-        <h1>威尔汉森智能指纹锁</h1>
-        <h4>合肥威尔汉森智能科技有限公司</h4>
+            <h1>威尔汉森智能指纹锁</h1>
+            <h4>合肥威尔汉森智能科技有限公司</h4>
     </header>
 
     <!-- Advantage -->
@@ -76,8 +76,7 @@
         </div>
         <div class="advantage_row">
             <h1>因为专业 所以放心</h1>
-            <p>5A级钻化触摸屏，最新、最先进的密码防窥技术；最新键盘采用苹果手机级别触控原理；密码
-                触摸屏优化等核心，科技铸就品质，彰显身份地位的完美诠释。
+            <p>5A级钻化触摸屏，最新、最先进的密码防窥技术；最新键盘采用苹果手机级别触控原理；密码 触摸屏优化等核心，科技铸就品质，彰显身份地位的完美诠释。
             </p>
         </div>
         <div class="advantage_row">
@@ -96,7 +95,25 @@
         </div>
     </section>
 
-    <section></section>
+    <section class="wrap data_wrap">
+        <div class="data_row">
+            <img src="./image/pic_fingerprint.png" alt="fingerprint">
+        </div>
+        <div class="data_row">
+            <div>
+                <h1>28</h1>
+                <p>欧美地区28%的公司、家庭已经用上指纹锁</p>
+            </div>
+            <div>
+                <h1>10000</h1>
+                <p>截至2016年10月1日，全国累计已有10000多个房产项目采用指纹锁</p>
+            </div>
+            <div>
+                <h1>135</h1>
+                <p>全球超过135家品牌银行和更高安全性场所使用</p>
+            </div>
+        </div>
+    </section>
 
     <section></section>
 
