[Scene] structure finished

--- a/index.html
+++ b/index.html
@@ -64,20 +64,23 @@
 
     <!-- Banner -->
     <header class="banner">
-        <h2>科技智能未来</h1>
+        <div>
+            <h2>科技智能未来</h2>
             <h1>威尔汉森智能指纹锁</h1>
             <h4>合肥威尔汉森智能科技有限公司</h4>
+        </div>
     </header>
 
     <!-- Advantage -->
+    <div class="cut">
+        <p class="cut_text">产品优势<i class="cut_line"></i></p>
+    </div>
     <section class="wrap advantage_wrap">
         <div class="advantage_row">
-            <p class="cut_text">产品优势<i class="cut_line"></i></p>
+            <h1>因为专业 锁以放心</h1>
         </div>
         <div class="advantage_row">
-            <h1>因为专业 所以放心</h1>
-            <p>5A级钻化触摸屏，最新、最先进的密码防窥技术；最新键盘采用苹果手机级别触控原理；密码 触摸屏优化等核心，科技铸就品质，彰显身份地位的完美诠释。
-            </p>
+            <p>5A级钻化触摸屏，最新、最先进的密码防窥技术；最新键盘采用苹果手机级别触控原理； 密码 触摸屏优化等核心，科技铸就品质，彰显身份地位的完美诠释。</p>
         </div>
         <div class="advantage_row">
             <figure>
@@ -95,6 +98,7 @@
         </div>
     </section>
 
+    <!-- Data -->
     <section class="wrap data_wrap">
         <div class="data_row">
             <img src="./image/pic_fingerprint.png" alt="fingerprint">
@@ -115,9 +119,43 @@
         </div>
     </section>
 
-    <section></section>
+    <!-- Scene -->
+    <div class="cut">
+        <p class="cut_text">使用场景<i class="cut_line"></i></p>
+    </div>
+    <section class="wrap scene_wrap">
+        <div class="scene_row">
+            <img src="./image/pic_04.png" alt="">
+        </div>
+        <div class="scene_row">
+            <div class="scene_person">
+                <div>
+                    <h4>一键解决您的四大烦恼</h4>
+                    <ol>
+                        <li><span>1</span>儿童回家将钥匙忘在学校，无法开门在门口等待父母</li>
+                        <li><span>2</span>老人年纪大了，经常忘记钥匙放在哪</li>
+                        <li><span>3</span>出门运动带钥匙不方便</li>
+                        <li><span>4</span>出门钥匙丢了，只能打电话求助</li>
+                    </ol>
+                </div>
+                <div class="sketch_lock">
+                    <img src="./image/pic_sketch.png" alt="">
+                </div>
+            </div>
+            <div class="scene_pic">
+                <img class="scene_pic" src="./image/pic_05.png" alt="kid">
+                <img class="scene_pic" src="./image/pic_06.png" alt="old">
+                <img class="scene_pic" src="./image/pic_07.png" alt="sport">
+                <img class="scene_pic" src="./image/pic_08.png" alt="lost">
+            </div>
+        </div>
+   
+    </section>
 
-    <section></section>
+    <!-- Parameter -->
+    <section>
+
+    </section>
 
     <section></section>
 
