[parameter] structure finished

--- a/index.html
+++ b/index.html
@@ -153,8 +153,40 @@
     </section>
 
     <!-- Parameter -->
-    <section>
+    <section class="wrap parameter_wrap">
+        <div class="parameter_row">
+            <figure>
+                <img src="./image/pic_advantage01.png" alt="">
+                <figcaption>瑞典指纹传感器</figcaption>
+            </figure>
+            <figure>
+                <img src="./image/pic_advantage02.png" alt="">
+                <figcaption>自动对焦专利技术</figcaption>
+            </figure>
+            <figure>
+                <img src="./image/pic_advantage03.png" alt="">
+                <figcaption>高速触摸芯片</figcaption>
+            </figure>
+            <figure>
+                <img src="./image/pic_advantage04.png" alt="">
+                <figcaption>精湛工艺</figcaption>                
+            </figure>
+        </div>
 
+        <div class="parameter_row">
+            <div>
+                <h1><span>100</span>万</h1>
+                <p>采集头 - 集成100万个传感器</p>
+            </div>
+            <div>
+                <h1><span>＜0.01%</span></h1>
+                <p>拒真率 - 拒绝假指纹识别</p>
+            </div>
+            <div>
+                <h1><span>0.5s</span></h1>
+                <p>指纹识别 - 小于0.5秒即可开启</p>
+            </div>
+        </div>
     </section>
 
     <section></section>
