[product] strucure finished

--- a/index.html
+++ b/index.html
@@ -189,7 +189,39 @@
         </div>
     </section>
 
-    <section></section>
+    <!-- Product -->
+    <div class="cut">
+        <p class="cut_text">产品中心<i class="cut_line"></i></p>
+    </div>
+    <section class="wrap product_wrap">
+
+        <div class="product_row">
+            <h1>独具匠心 卓越品质</h1>
+        </div>
+
+        <div class="product_row">
+            <div>
+                <img src="./image/pic_product02.png" alt="product">
+            </div>
+            <div>
+                <h4>低调的奢华科技</h4>
+                <h2>WRHS - FPI SOO3</h2>
+                <p>锁体采用金色全金属拉丝镀锌材质，高贵奢华。5A级钻化触摸屏，键盘采用苹果级别
+                   触控原理，密码触摸屏优化等核心。科技铸就品质，彰显身份地位的完美诠释。
+                </p>
+                <a href="">查看更多 </a>
+            </div>
+        </div>
+
+        <div class="product_row">
+            <img src="./image/pic_product_preview01.png" alt="product_preview01">
+            <img src="./image/pic_product_preview02.png" alt="product_preview02">
+            <img src="./image/pic_product_preview03.png" alt="product_preview03">
+            <img src="./image/pic_product_preview04.png" alt="product_preview04">
+            <img src="./image/pic_product_preview05.png" alt="product_preview05">
+        </div> 
+               
+    </section>
 
     <section></section>
 
