[contact] structure finished

--- a/index.html
+++ b/index.html
@@ -223,7 +223,41 @@
                
     </section>
 
-    <section></section>
+    <!-- Contact -->
+    <section class="wrap contact_wrap">
+        <div class="contact_row">
+            <div>
+                <img src="./image/icon_location.png" alt="location">
+                <span>地址：</span>
+                <span>合肥市高新区创新大道2800号创新产业园二期F1 204室</span>
+            </div>
+            <div>
+                <img src="./image/icon_phone.png" alt="phone">
+                <span>电话：</span>
+                <span>400-8696-377</span>
+            </div>
+            <div>
+                <img src="./image/icon_email.png" alt="email">
+                <span>邮箱：</span>
+                <span>654661866@qq.com</span>
+            </div>
+        </div>
+        <div class="contact_row">
+            <form class="contact_form" action="" method="">
+                <h2>联系我们</h2>
+                <div>
+                    <input type="text" class="contact_message" name="name" value="" placeholder="您的姓名">
+                </div>
+                <div>    
+                    <input type="email" class="contact_message" name="email" value="" placeholder="您的邮箱">
+                </div>
+                <div>
+                    <textarea name="suggest" placeholder="您想对我们说的话"></textarea>
+                </div>
+                <button type="">发送</button>         
+            </form>
+        </div>
+    </section>
 
 
     <footer></footer>
