--- a/index.html
+++ b/index.html
@@ -259,8 +259,35 @@
         </div>
     </section>
 
-
-    <footer></footer>
+    <!-- Footer -->
+    <footer class="wrap footer_wrap">
+        <div class="footer_row">
+            <figure>
+                <img src="./image/qr_01.png" alt="QR">
+                <figcaption>
+                    <h4>微信公众号</h4>
+                    <p>想了解更多我们的动态吗<br>快快关注我们的公众号</p>
+                </figcaption>
+            </figure>            
+            <figure>
+                <img src="./image/qr_02.png" alt="QR">
+                <figcaption>
+                    <h4>市场销售专员</h4>
+                    <p>李先生：13655556156<br>扫描二维码，联系推广专员</p>
+                </figcaption>
+            </figure>
+            <figure>
+                <img src="./image/qr_03.png" alt="QR">
+                <figcaption>
+                    <h4>销售专线</h4>
+                    <p>陈先生：13696794066<br>扫描二维码，联系销售专员</p>
+                </figcaption>
+            </figure>            
+        </div>
+        <div class="footer_row">
+            <h5>&copy北京皓辰网域网络信息技术有限公司</h5>
+        </div>
+    </footer>
 
 
 </body>
