picture size reset

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <li>
                 <a href="#">
                     <i class="menu_line"></i>
-                    关于我们
+                    公司简介
                 </a>
             </li>
         </ul>
@@ -156,20 +156,20 @@
     <section class="wrap parameter_wrap">
         <div class="parameter_row">
             <figure>
-                <img src="./image/pic_advantage01.png" alt="">
+                <img src="./image/pic_advantage01.png" alt="advantage_01">
                 <figcaption>瑞典指纹传感器</figcaption>
             </figure>
             <figure>
-                <img src="./image/pic_advantage02.png" alt="">
+                <img src="./image/pic_advantage02.png" alt="advantage_02">
                 <figcaption>自动对焦专利技术</figcaption>
             </figure>
             <figure>
-                <img src="./image/pic_advantage03.png" alt="">
+                <img src="./image/pic_advantage03.png" alt="advantage_03">
                 <figcaption>高速触摸芯片</figcaption>
             </figure>
             <figure>
-                <img src="./image/pic_advantage04.png" alt="">
-                <figcaption>精湛工艺</figcaption>                
+                <img src="./image/pic_advantage04.png" alt="advantage_04">
+                <figcaption>精湛工艺</figcaption>              
             </figure>
         </div>
 
@@ -246,13 +246,13 @@
             <form class="contact_form" action="" method="">
                 <h2>联系我们</h2>
                 <div>
-                    <input type="text" class="contact_message" name="name" value="" placeholder="您的姓名">
+                    <input type="text" class="form_element" name="name" value="" placeholder="您的姓名">
                 </div>
-                <div>    
-                    <input type="email" class="contact_message" name="email" value="" placeholder="您的邮箱">
+                <div class="form_element">    
+                    <input type="email" class="form_element" name="email" value="" placeholder="您的邮箱">
                 </div>
-                <div>
-                    <textarea name="suggest" placeholder="您想对我们说的话"></textarea>
+                <div class="form_element">
+                    <textarea class="form_element" name="suggest" placeholder="您想对我们说的话"></textarea>
                 </div>
                 <button type="">发送</button>         
             </form>
