--- a/index.html
+++ b/index.html
@@ -243,10 +243,10 @@
             </div>
         </div>
         <div class="contact_row">
-            <form class="contact_form" action="" method="">
-                <h2>联系我们</h2>
-                <div>
-                    <input type="text" class="form_element" name="name" value="" placeholder="您的姓名">
+            <h2>联系我们</h2>
+            <form class="contact_form" action="" method="">  
+                <div class="form_element">
+                    <input type="text" name="name" value="" placeholder="您的姓名">
                 </div>
                 <div class="form_element">    
                     <input type="email" class="form_element" name="email" value="" placeholder="您的邮箱">
@@ -254,7 +254,9 @@
                 <div class="form_element">
                     <textarea class="form_element" name="suggest" placeholder="您想对我们说的话"></textarea>
                 </div>
-                <button type="">发送</button>         
+                <div class="form_element">
+                    <button type="submit">发送</button>
+                </div>       
             </form>
         </div>
     </section>
