--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     </nav>
 
     <!-- Banner -->
-    <header class="banner">
+    <header class="wrap banner_wrap">
         <div>
             <h2>科技智能未来</h2>
             <h1>威尔汉森智能指纹锁</h1>
@@ -71,10 +71,11 @@
         </div>
     </header>
 
+    <section class="wrap cut_wrap">
+        <div><span class="cut_text">产品优势</span><i class="cut_line"></i></div>
+    </section>
+    
     <!-- Advantage -->
-    <div class="cut">
-        <p class="cut_text">产品优势<i class="cut_line"></i></p>
-    </div>
     <section class="wrap advantage_wrap">
         <div class="advantage_row">
             <h1>因为专业 锁以放心</h1>
@@ -119,10 +120,16 @@
         </div>
     </section>
 
+    <!-- Cut -->
+    <section class="wrap cut_wrap">
+        <div>
+            <p>
+                <span class="cut_text">使用场景</span><i class="cut_line"></i>
+            <p>
+        </div>
+    </section>
+
     <!-- Scene -->
-    <div class="cut">
-        <p class="cut_text">使用场景<i class="cut_line"></i></p>
-    </div>
     <section class="wrap scene_wrap">
         <div class="scene_row">
             <img src="./image/pic_04.png" alt="">
@@ -139,17 +146,16 @@
                     </ol>
                 </div>
                 <div class="sketch_lock">
-                    <img src="./image/pic_sketch.png" alt="">
+                    <img src="./image/pic_sketch.png" alt="sketch_lock">
                 </div>
             </div>
             <div class="scene_pic">
-                <img class="scene_pic" src="./image/pic_05.png" alt="kid">
-                <img class="scene_pic" src="./image/pic_06.png" alt="old">
-                <img class="scene_pic" src="./image/pic_07.png" alt="sport">
-                <img class="scene_pic" src="./image/pic_08.png" alt="lost">
+                <img src="./image/pic_05.png" alt="kid">
+                <img src="./image/pic_06.png" alt="old">
+                <img src="./image/pic_07.png" alt="sport">
+                <img src="./image/pic_08.png" alt="lost">
             </div>
         </div>
-   
     </section>
 
     <!-- Parameter -->
@@ -189,10 +195,16 @@
         </div>
     </section>
 
+
+    <!-- Cut -->
+    <section class="wrap cut_wrap">
+        <div>
+            <p>
+                <span class="cut_text">产品中心</span><i class="cut_line"></i>
+            <p>
+        </div>
+    </section>
     <!-- Product -->
-    <div class="cut">
-        <p class="cut_text">产品中心<i class="cut_line"></i></p>
-    </div>
     <section class="wrap product_wrap">
 
         <div class="product_row">
@@ -209,7 +221,7 @@
                 <p>锁体采用金色全金属拉丝镀锌材质，高贵奢华。5A级钻化触摸屏，键盘采用苹果级别
                    触控原理，密码触摸屏优化等核心。科技铸就品质，彰显身份地位的完美诠释。
                 </p>
-                <a href="">查看更多 </a>
+                <a href="">查看更多 >></a>
             </div>
         </div>
 
