[structure] adjust layout

--- a/index.html
+++ b/index.html
@@ -18,16 +18,14 @@
     <title>威尔汉森</title>
 </head>
 
-<body>
+<body class="body_wrap">
     <!--[if lt IE 7]>
         <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
 
     <!-- Navbar -->
     <nav class="wrap nav_wrap">
-        <a href="#">
-            <img src="./image/nav_logo.png" alt="">
-        </a>
+        <a class="logo" href="#">Logo</a>
         <ul>
             <li>
                 <a href="./index.html">
@@ -85,15 +83,15 @@
         </div>
         <div class="advantage_row">
             <figure>
-                <img src="./image/pic_01.png" alt="">
+                <img class="advantage_pic" src="./image/pic_01.png" alt="">
                 <figcaption>0.5s光学识别指纹读头，响应速度快打开</figcaption>
             </figure>
             <figure>
-                <img src="./image/pic_02.png" alt="">
+                <img class="advantage_pic" src="./image/pic_02.png" alt="">
                 <figcaption>滑盖自动唤醒平时处于休眠状态70%</figcaption>
             </figure>
             <figure>
-                <img src="./image/pic_03.png" alt="">
+                <img class="advantage_pic" src="./image/pic_03.png" alt="">
                 <figcaption>多门搭配安装90%适用，与门之间完美搭配</figcaption>
             </figure>
         </div>
