--- a/index.html
+++ b/index.html
@@ -11,7 +11,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
+    <link href='http://cdn.webfont.youziku.com/webfonts/nomal/101456/47086/59a4c5a0f629d815acd25cd0.css' rel='stylesheet' type='text/css'
+    />
+    <link href='http://cdn.webfont.youziku.com/webfonts/nomal/101456/47065/59a4c922f629d815acd25cd3.css' rel='stylesheet' type='text/css'
+    />
+    <link href='http://cdn.webfont.youziku.com/webfonts/nomal/101456/35481/59a4ca0df629d815acd25cd4.css' rel='stylesheet' type='text/css'
+    />
     <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/style.css">
 
@@ -26,7 +31,7 @@
     <!-- Navbar -->
     <nav class="wrap nav_wrap">
         <a class="logo" href="#">Logo</a>
-        <ul>
+        <ul class="csscd0cd449318c50">
             <li>
                 <a href="./index.html">
                     <i class="menu_line"></i>
@@ -63,35 +68,35 @@
     <!-- Banner -->
     <header class="wrap banner_wrap">
         <div>
-            <h2>科技智能未来</h2>
-            <h1>威尔汉森智能指纹锁</h1>
-            <h4>合肥威尔汉森智能科技有限公司</h4>
+            <h2 class="csscd0daf66f18c50">科技智能未来</h2>
+            <h1 class="csscd0cd449318c50">威尔汉森智能指纹锁</h1>
+            <h4 class="csscd0daf66f18c50">合肥威尔汉森智能科技有限公司</h4>
         </div>
     </header>
 
     <section class="wrap cut_wrap">
-        <div><span class="cut_text">产品优势</span><i class="cut_line"></i></div>
+        <div><span class="cut_text csscd0cd449318c50">产品优势</span><i class="cut_line"></i></div>
     </section>
-    
+
     <!-- Advantage -->
-    <section class="wrap advantage_wrap">
-        <div class="advantage_row">
-            <h1>因为专业 锁以放心</h1>
+    <section class="wrap advantage_wrap csscd0cd449318c50">
+        <div class="advantage_row ">
+            <h1 class="subtitle">因为专业 锁以放心</h1>
         </div>
         <div class="advantage_row">
-            <p>5A级钻化触摸屏，最新、最先进的密码防窥技术；最新键盘采用苹果手机级别触控原理； 密码 触摸屏优化等核心，科技铸就品质，彰显身份地位的完美诠释。</p>
+            <p>5A级钻化触摸屏，最新、最先进的密码防窥技术；最新键盘采用苹果手机级别触控原理； 密码 触摸屏优化等核心，<br>科技铸就品质，彰显身份地位的完美诠释。</p>
         </div>
         <div class="advantage_row">
             <figure>
-                <img class="advantage_pic" src="./image/pic_01.png" alt="">
+                <img src="./image/pic_01.png" alt="">
                 <figcaption>0.5s光学识别指纹读头，响应速度快打开</figcaption>
             </figure>
             <figure>
-                <img class="advantage_pic" src="./image/pic_02.png" alt="">
+                <img src="./image/pic_02.png" alt="">
                 <figcaption>滑盖自动唤醒平时处于休眠状态70%</figcaption>
             </figure>
             <figure>
-                <img class="advantage_pic" src="./image/pic_03.png" alt="">
+                <img src="./image/pic_03.png" alt="">
                 <figcaption>多门搭配安装90%适用，与门之间完美搭配</figcaption>
             </figure>
         </div>
@@ -102,17 +107,17 @@
         <div class="data_row">
             <img src="./image/pic_fingerprint.png" alt="fingerprint">
         </div>
-        <div class="data_row">
+        <div class="data_row csscd0cd449318c50">
             <div>
-                <h1>28</h1>
+                <h1 class="csscd0de8d1318c50">28</h1>
                 <p>欧美地区28%的公司、家庭已经用上指纹锁</p>
             </div>
             <div>
-                <h1>10000</h1>
+                <h1 class="csscd0de8d1318c50">10000</h1>
                 <p>截至2016年10月1日，全国累计已有10000多个房产项目采用指纹锁</p>
             </div>
             <div>
-                <h1>135</h1>
+                <h1 class="csscd0de8d1318c50">135</h1>
                 <p>全球超过135家品牌银行和更高安全性场所使用</p>
             </div>
         </div>
@@ -123,7 +128,7 @@
         <div>
             <p>
                 <span class="cut_text">使用场景</span><i class="cut_line"></i>
-            <p>
+                <p>
         </div>
     </section>
 
@@ -132,7 +137,7 @@
         <div class="scene_row">
             <img src="./image/pic_04.png" alt="">
         </div>
-        <div class="scene_row">
+        <div class="scene_row csscd0cd449318c50">
             <div class="scene_person">
                 <div>
                     <h4>一键解决您的四大烦恼</h4>
@@ -157,8 +162,8 @@
     </section>
 
     <!-- Parameter -->
-    <section class="wrap parameter_wrap">
-        <div class="parameter_row">
+    <section class="wrap parameter_wrap csscd0cd449318c50">
+        <div class="parameter_row csscd0cd449318c50">
             <figure>
                 <img src="./image/pic_advantage01.png" alt="advantage_01">
                 <figcaption>瑞典指纹传感器</figcaption>
@@ -173,21 +178,21 @@
             </figure>
             <figure>
                 <img src="./image/pic_advantage04.png" alt="advantage_04">
-                <figcaption>精湛工艺</figcaption>              
+                <figcaption>精湛工艺</figcaption>
             </figure>
         </div>
 
         <div class="parameter_row">
             <div>
-                <h1><span>100</span>万</h1>
+                <h1><span class="csscd0de8d1318c50">100</span>万</h1>
                 <p>采集头 - 集成100万个传感器</p>
             </div>
             <div>
-                <h1><span>＜0.01%</span></h1>
+                <h1><span class="csscd0de8d1318c50">0.01%</span></h1>
                 <p>拒真率 - 拒绝假指纹识别</p>
             </div>
             <div>
-                <h1><span>0.5s</span></h1>
+                <h1><span class="csscd0de8d1318c50">0.5s</span></h1>
                 <p>指纹识别 - 小于0.5秒即可开启</p>
             </div>
         </div>
@@ -199,14 +204,14 @@
         <div>
             <p>
                 <span class="cut_text">产品中心</span><i class="cut_line"></i>
-            <p>
+                <p>
         </div>
     </section>
     <!-- Product -->
     <section class="wrap product_wrap">
 
         <div class="product_row">
-            <h1>独具匠心 卓越品质</h1>
+            <h1 class="subtitle">独具匠心 卓越品质</h1>
         </div>
 
         <div class="product_row">
@@ -215,11 +220,10 @@
             </div>
             <div>
                 <h4>低调的奢华科技</h4>
-                <h2>WRHS - FPI SOO3</h2>
-                <p>锁体采用金色全金属拉丝镀锌材质，高贵奢华。5A级钻化触摸屏，键盘采用苹果级别
-                   触控原理，密码触摸屏优化等核心。科技铸就品质，彰显身份地位的完美诠释。
+                <h2 class="csscd0de8d1318c50">WRHS - FPI SOO3</h2>
+                <p>锁体采用金色全金属拉丝镀锌材质，高贵奢华。5A级钻化触摸屏，键盘采用苹果级别 触控原理，密码触摸屏优化等核心。科技铸就品质，彰显身份地位的完美诠释。
                 </p>
-                <a href="">查看更多 >></a>
+                <a class="csscd0daf66f18c50" href="#">查看更多 >></a>
             </div>
         </div>
 
@@ -229,44 +233,41 @@
             <img src="./image/pic_product_preview03.png" alt="product_preview03">
             <img src="./image/pic_product_preview04.png" alt="product_preview04">
             <img src="./image/pic_product_preview05.png" alt="product_preview05">
-        </div> 
-               
+        </div>
+
     </section>
 
     <!-- Contact -->
-    <section class="wrap contact_wrap">
+    <section class="wrap contact_wrap csscd0cd449318c50">
         <div class="contact_row">
             <div>
                 <img src="./image/icon_location.png" alt="location">
-                <span>地址：</span>
-                <span>合肥市高新区创新大道2800号创新产业园二期F1 204室</span>
+                <span>地址:<br>合肥市高新区创新大道2800号创新产业园二期F1 204室</span>
             </div>
             <div>
                 <img src="./image/icon_phone.png" alt="phone">
-                <span>电话：</span>
-                <span>400-8696-377</span>
+                <span>电话:<br>400-8696-377</span>
             </div>
             <div>
                 <img src="./image/icon_email.png" alt="email">
-                <span>邮箱：</span>
-                <span>654661866@qq.com</span>
+                <span>邮箱:<br>654661866@qq.com</span>
             </div>
         </div>
         <div class="contact_row">
             <h2>联系我们</h2>
-            <form class="contact_form" action="" method="">  
+            <form class="contact_form" action="" method="">
                 <div class="form_element">
                     <input type="text" name="name" value="" placeholder="您的姓名">
                 </div>
-                <div class="form_element">    
+                <div class="form_element">
                     <input type="email" class="form_element" name="email" value="" placeholder="您的邮箱">
                 </div>
                 <div class="form_element">
                     <textarea class="form_element" name="suggest" placeholder="您想对我们说的话"></textarea>
                 </div>
                 <div class="form_element">
-                    <button type="submit">发送</button>
-                </div>       
+                    <button class="csscd0cd449318c50" type="submit">发送</button>
+                </div>
             </form>
         </div>
     </section>
@@ -276,28 +277,28 @@
         <div class="footer_row">
             <figure>
                 <img src="./image/qr_01.png" alt="QR">
-                <figcaption>
+                <figcaption class="csscd0cd449318c50">
                     <h4>微信公众号</h4>
                     <p>想了解更多我们的动态吗<br>快快关注我们的公众号</p>
                 </figcaption>
-            </figure>            
+            </figure>
             <figure>
                 <img src="./image/qr_02.png" alt="QR">
-                <figcaption>
+                <figcaption class="csscd0cd449318c50">
                     <h4>市场销售专员</h4>
                     <p>李先生：13655556156<br>扫描二维码，联系推广专员</p>
                 </figcaption>
             </figure>
             <figure>
                 <img src="./image/qr_03.png" alt="QR">
-                <figcaption>
+                <figcaption class="csscd0cd449318c50">
                     <h4>销售专线</h4>
                     <p>陈先生：13696794066<br>扫描二维码，联系销售专员</p>
                 </figcaption>
-            </figure>            
+            </figure>
         </div>
         <div class="footer_row">
-            <h5>&copy北京皓辰网域网络信息技术有限公司</h5>
+            <h4 csscd0cd449318c50>&copy北京皓辰网域网络信息技术有限公司</h4>
         </div>
     </footer>
 
