bulid joinus.html

--- a/index.html
+++ b/index.html
@@ -75,7 +75,13 @@
     </header>
 
     <section class="wrap cut_wrap">
-        <div><span class="cut_text csscd0cd449318c50">产品优势</span><i class="cut_line"></i></div>
+        <div>
+            <p>
+                <i class="cut_line"></i>
+                <span class="cut_text">产品优势</span>
+                <i class="cut_line"></i>
+                <p>
+        </div>
     </section>
 
     <!-- Advantage -->
@@ -110,15 +116,15 @@
         <div class="data_row csscd0cd449318c50">
             <div>
                 <h1 class="csscd0de8d1318c50">28</h1>
-                <p>欧美地区28%的公司、家庭已经用上指纹锁</p>
+                <p>欧美地区28%的公司、家庭<br>已经用上指纹锁</p>
             </div>
             <div>
                 <h1 class="csscd0de8d1318c50">10000</h1>
-                <p>截至2016年10月1日，全国累计已有10000多个房产项目采用指纹锁</p>
+                <p>截至2016年10月1日，全国<br>累计已有10000多个房产项<br>目采用指纹锁</p>
             </div>
             <div>
                 <h1 class="csscd0de8d1318c50">135</h1>
-                <p>全球超过135家品牌银行和更高安全性场所使用</p>
+                <p>全球超过135家品牌银行和<br>更高安全性场所使用</p>
             </div>
         </div>
     </section>
@@ -127,7 +133,9 @@
     <section class="wrap cut_wrap">
         <div>
             <p>
-                <span class="cut_text">使用场景</span><i class="cut_line"></i>
+                <i class="cut_line"></i>
+                <span class="cut_text">使用场景</span>
+                <i class="cut_line"></i>
                 <p>
         </div>
     </section>
@@ -203,7 +211,9 @@
     <section class="wrap cut_wrap">
         <div>
             <p>
-                <span class="cut_text">产品中心</span><i class="cut_line"></i>
+                <i class="cut_line"></i>
+                <span class="cut_text">产品中心</span>
+                <i class="cut_line"></i>
                 <p>
         </div>
     </section>
@@ -301,7 +311,6 @@
             <h4 csscd0cd449318c50>&copy北京皓辰网域网络信息技术有限公司</h4>
         </div>
     </footer>
-
 
 </body>
 
