--- a/joinus.html
+++ b/joinus.html
@@ -2,25 +2,152 @@
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="/style.css">
-    </head>
-    <body>
-        <!--[if lt IE 7]>
+<!--[if gt IE 8]><!-->
+<html class="no-js">
+<!--<![endif]-->
+
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href='http://cdn.webfont.youziku.com/webfonts/nomal/101456/47086/59a4c5a0f629d815acd25cd0.css' rel='stylesheet' type='text/css'
+    />
+    <link href='http://cdn.webfont.youziku.com/webfonts/nomal/101456/47065/59a4c922f629d815acd25cd3.css' rel='stylesheet' type='text/css'
+    />
+    <link href='http://cdn.webfont.youziku.com/webfonts/nomal/101456/35481/59a4ca0df629d815acd25cd4.css' rel='stylesheet' type='text/css'
+    />
+    <link rel="stylesheet" href="css/animate.css">
+    <link rel="stylesheet" href="css/style.css">
+
+    <title>威尔汉森</title>
+</head>
+
+<body>
+    <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-        <header></header>
-        
-        <section></section>
+    <!-- Navbar -->
+    <nav class="wrap nav_wrap">
+        <a class="logo" href="#">Logo</a>
+        <ul class="csscd0cd449318c50">
+            <li>
+                <a href="./index.html">
+                    <i class="menu_line"></i>
+                    首页
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    <i class="menu_line"></i>
+                    产品中心
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    <i class="menu_line"></i>
+                    资讯动态
+                </a>
+            </li>
+            <li>
+                <a href="./joinus.html">
+                    <i class="menu_line"></i>
+                    加盟合作
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    <i class="menu_line"></i>
+                    公司简介
+                </a>
+            </li>
+        </ul>
+    </nav>
 
-        <footer></footer>
+    <!-- Partner -->
+    <section class="wrap partner_wrap">
+        <div class="partner_row">
+            <div class="join">
+                <h4>加盟合作</h4>
+                <ul>
+                    <li>客户类别</li>
+                    <li>代理商资质政策</li>
+                    <li>代理商回报和支持</li>
+                    <li>意向合作申请表下载</li>
+                </ul>
+            </div>
+            <div class="contact">
+                <h4>联系我们</h4>
+                <p>*请填写以下信息，我们会尽快和您联系</p>
+                <form class="contact_form" action="" method="">
+                    <div class="form_element">
+                        <input type="text" name="name" value="" placeholder="您的姓名">
+                    </div>
+                    <div class="form_element">
+                        <input type="email" class="form_element" name="email" value="" placeholder="您的邮箱">
+                    </div>
+                    <div class="form_element">
+                        <textarea class="form_element" name="suggest" placeholder="您想对我们说的话"></textarea>
+                    </div>
+                    <div class="form_element">
+                        <button class="csscd0cd449318c50" type="submit">发送</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+        <div class="partner_row">
+            <figure>
+                <img src="./image/pic_title.png" alt="partner">
+                <figcaption></figcaption>
+            </figure>
+            <p>合肥威尔汉森智能科技有限公司 作为“RELHANSN威尔汉森”品牌、产品、专利的唯一合法拥有人，现面向全国 范围内广泛招商，发展以城市代理商为主的战略合作伙伴。
+                <br> 城市代理商————是指对天防指纹锁产品及销售管理模式认可，有市场开拓能力，经培训后对产品的操作及维护 有详细的了解，具备一定的售后服务能力，经威尔汉森公司授权，在指定区域内合法销售威尔汉森品牌指纹锁
+                产品，并且服从公司安排，对其经销行为负责的产业。
+            </p>
+            <h3>威尔汉森用户类别</h3>
+            <dl>
+                <dt>1）经销商</dt>
+                <dd>经销威尔汉森指纹锁产品的商家，没有订货要求，同时也无法享受代理商的权益。</dd>
+                <dt>2）一级代理商</dt>
+                <dd>代理销售威尔汉森指纹锁产品，享受代理价和其他代理商权益，由威尔汉森科技公司授权。</dd>
+                <dt>3）独家代理商</dt>
+                <dd>威尔汉森科技公司产品的市场分销策略考虑，原则上只授权最具优势的一个代理商为城市独家代理商，确保代理商拥有足够的市场空间和丰厚的利润</dd>
+                <dt>4）战略伙伴</dt>
+                <dd>独家代理商中极为优秀的精锐，威尔汉森科技最顶级的渠道合作伙伴，基本资质要求和独家类似，但威尔汉森对其支持更大、合作更深、扶持更透，盈利更为丰厚，享有路虎配车特权。</dd>
+            </dl>
+        </div>
+    </section>
+    <!-- Footer -->
+    <footer class="wrap footer_wrap">
+        <div class="footer_row">
+            <figure>
+                <img src="./image/qr_01.png" alt="QR">
+                <figcaption class="csscd0cd449318c50">
+                    <h4>微信公众号</h4>
+                    <p>想了解更多我们的动态吗<br>快快关注我们的公众号</p>
+                </figcaption>
+            </figure>
+            <figure>
+                <img src="./image/qr_02.png" alt="QR">
+                <figcaption class="csscd0cd449318c50">
+                    <h4>市场销售专员</h4>
+                    <p>李先生：13655556156<br>扫描二维码，联系推广专员</p>
+                </figcaption>
+            </figure>
+            <figure>
+                <img src="./image/qr_03.png" alt="QR">
+                <figcaption class="csscd0cd449318c50">
+                    <h4>销售专线</h4>
+                    <p>陈先生：13696794066<br>扫描二维码，联系销售专员</p>
+                </figcaption>
+            </figure>
+        </div>
+        <div class="footer_row">
+            <h4 csscd0cd449318c50>&copy北京皓辰网域网络信息技术有限公司</h4>
+        </div>
+    </footer>
 
 
-    </body>
+</body>
+
 </html>
