--- a/joinus.html
+++ b/joinus.html
@@ -98,9 +98,11 @@
         <div class="partner_row csscd0cd449318c50">
             <figure>
                 <img src="./image/pic_title.png" alt="partner">
-                <figcaption><p>合肥威尔汉森智能科技有限公司 作为“RELHANSN威尔汉森”品牌、产品、专利的唯一合法拥有人，现面向全国 范围内广泛招商，发展以城市代理商为主的战略合作伙伴。
-                    <br> 城市代理商————是指对天防指纹锁产品及销售管理模式认可，有市场开拓能力，经培训后对产品的操作及维护 有详细的了解，具备一定的售后服务能力，经威尔汉森公司授权，在指定区域内合法销售威尔汉森品牌指纹锁
-                    产品，并且服从公司安排，对其经销行为负责的产业。</p>
+                <figcaption>
+                    <p>合肥威尔汉森智能科技有限公司 作为“RELHANSN威尔汉森”品牌、产品、专利的唯一合法拥有人，现面向全国 范围内广泛招商，发展以城市代理商为主的战略合作伙伴。
+                        <br> 城市代理商————是指对天防指纹锁产品及销售管理模式认可，有市场开拓能力，经培训后对产品的操作及维护 有详细的了解，具备一定的售后服务能力，经威尔汉森公司授权，在指定区域内合法销售威尔汉森品牌指纹锁
+                        产品，并且服从公司安排，对其经销行为负责的产业。
+                    </p>
                 </figcaption>
             </figure>
             <h3>威尔汉森用户类别</h3>
@@ -116,6 +118,7 @@
             </dl>
         </div>
     </section>
+
     <!-- Footer -->
     <footer class="wrap footer_wrap">
         <div class="footer_row">
@@ -145,7 +148,6 @@
             <h4 csscd0cd449318c50>&copy北京皓辰网域网络信息技术有限公司</h4>
         </div>
     </footer>
-
 
 </body>
 
