--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <title>威尔汉森</title>
 </head>
 
-<body class="body_wrap">
+<body>
     <!--[if lt IE 7]>
         <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
